KAIZEN-0 Nedgrader til java 8
Det er et par avhengigheter som ikke finnes i Java 11 og som mangler fra versjon 1 av common.
Inntil videre så går vi tilbake til Java 8.